@@ -1,5 +1,6 @@
 <?php // $Id$
 include_once 'includes/init.php';
+require_valid_referring_url ();
 
 $icon_max_size = '3000';
 $icon_path = 'icons/';
@@ -69,6 +70,8 @@ if ( empty ( $error ) && ! empty ( $delete ) ) {
   }
   // Rename any icons associated with this cat_id.
   renameIcon ( $id );
+} else if ( empty ( $error ) && empty ( $catname ) ) {
+  $error = translate ( 'Category name is required' );
 } else if ( empty ( $error ) ) {
   if ( ! empty ( $id ) ) {
     # Update (don't let them change global status).
