@@ -14,6 +14,7 @@
  * Admin permissions are checked by the WebCalendar class.
  */
 include_once 'includes/init.php';
+require_valid_referring_url ();
 
 $cur = $error = '';
 $found = $foundOld = false;
