@@ -4,6 +4,7 @@
 // file in ways they shouldn't. Users may try to type in a URL to get around
 // functions that are not being displayed on the web page to them.
 include_once 'includes/init.php';
+require_valid_referring_url ();
 load_user_layers();
 
 $referer = '';
